# cpp_tk_designer

./: CMakeLists.txt  README.md  build.sh  design.json  main.cpp
include/: base_form.hpp  designer.hpp  designer_canvas.hpp  form_model.hpp  fwd.hpp  palette.hpp  preview_builder.hpp  serialize.hpp  widget_model.hpp
